--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
+  "_moduleAliases": {
+    "@": "src"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -50,6 +53,7 @@
     "framer-motion": "^12.9.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "module-alias": "^2.2.3",
     "next-themes": "^0.3.0",
     "openai": "^4.97.0",
     "react": "^18.3.1",
