--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "firebase": "^11.7.1",
     "framer-motion": "^12.9.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
