--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/features/*"]
+      "@/*": ["./src/*"],
+      "@/components/ui/*": ["./src/features/UI/*"]
     },
     "noImplicitAny": false,
     "noUnusedParameters": false,
